<resources>
    <string name="app_name">Calculater</string>
    <string name="calc_text">0</string>
    <string name="divide">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="Subtracter">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="Multiplie">*</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="clr">CLR</string>
    <string name="Equal">=</string>
    <string name="Dot">.</string>
</resources>